# keinsell

./: .gitignore  .gitmodules  README  README.md  README.nfo
application-software/: README.md
apps/neuronek/: README.md
code/auctioner/: CHANGELOG.md  README.md  auctioner.cabal  package.yaml
code/auctioner/app/: Main.hs
code/auctioner/src/Data/: Order.hs  OrderBook.hs
docs/: tools.md
excercises/haskell/: IsLeapYear.hs
experiments/identicon/: package-lock.json  package.json  pnpm-lock.yaml  rescript.json
experiments/identicon/src/: index.res
experiments/neuronek-dashboard-bubbletea/: README.md  go.mod  go.sum  main.go  main_test.go
implementation/: README.md
implementation/parser/: README.md
implementation/parser/csv/: .ocamlformat  README.md  dune  dune-project
implementation/parser/csv/lib/: csv.re  lexer.rei
implementation/parser/csv/test/: dune
implementation/parser/ini/: CHANGELOG.md  README.md  ini.cabal  package.yaml
implementation/parser/ini/app/: Main.hs
implementation/parser/ini/src/: Lib.hs
solutions/appointment-management/: .editorconfig  .gitignore  .ocamlformat  README.md  dune-project  dune-workspace  flake.nix  kamel.opam
solutions/appointment-management/lib/: application.re  dune  identity.re  user.re
solutions/appointment-management/test/: dune  test_kamel.re
things/: TODO.md
things/interpreter/bf/: bf.opam  dune-project
things/parser/csv/: CONTRIBUTING.md  LICENSE  Makefile  README.md  csv.opam
things/parser/csv/lib/: csv.rei  dune  parser.rei
things/parser/csv/test/: test.re
things/parser/ini/: Makefile  README.md  dune-project
things/parser/ini/lib/: dune
things/parser/ini/test/: dune
tools/grimoire/: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  main.py  pyproject.toml  pyrightconfig.json
tools/zkk/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
tools/zkk/zkk/: concept_extractor.py  core.py  main.py  storage.py  vector_storage.py
www/: .env.example  README.md  astro.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  rescript.json  tailwind.config.mjs  worker-configuration.d.ts  wrangler.jsonc
www/src/: App.res  App.res.mjs  Button.res  Button.res.mjs  consts.ts  content.config.ts  index.css
www/src/components/: BaseHead.astro  CategorizationMeta.astro  DynamicWikiSidebar.astro  Footer.astro  FormattedDate.astro  Header.astro  HeaderLink.astro  NavigationBar.astro  Sidebar.astro  TaxonomyExplorer.astro  Timeline.astro  WikiKnowledgeGraph.astro  WikiSidebar.astro
www/src/content/: new-firmware-has-arrived.md  story.md
www/src/content/blog/: 20250602-rebirth.md  architecture-tripping.md  doesnt-work-on-my-machine.md  environment-can-ruin-you.md  first-post.md  functional-programmers.md  javascript-developers-are-insufferable.md  mad-developer-yelling-at-industry.md  markdown-style-guide.md  object-oriented-backstory.md  second-post.md  software-is-meant-to-be-breaking.md  third-post.md  using-mdx.mdx  works-on-my-machine.md
www/src/content/docs/: index.mdx
www/src/content/docs/implementations/: preferences.md
www/src/content/docs/patterns/: fasade.md
www/src/content/drafts/: mnemonic-architecture.md
www/src/content/implementation/: preferences.md
www/src/content/pattern/: fasade.md
www/src/content/tags/: ocaml.md  rant.md  rust.md  thoughts.md  tools.md  web-dev.md
www/src/layouts/: BlogPost.astro  WikiLayout.astro
www/src/pages/: about.astro  blog.astro  collections.astro  feed.astro  index.astro  story.astro  tags.astro
www/src/pages/api/: feed.json.ts
www/src/pages/blog/: [...slug].astro  [slug].astro  index.astro
www/src/pages/docs/: [...slug].astro  index.astro
www/src/pages/implementations/: [slug].astro  index.astro
www/src/pages/patterns/: [slug].astro  index.astro
www/src/scripts/: validate-categorization.ts
www/src/styles/: global.css
www/src/utils/: categorization.ts  timelineData.ts  wiki.ts
