(lang dune 3.18)

(using melange 0.1)
(using menhir 2.1)

(implicit_transitive_deps false)
(cram enable)
(name kamel)

(formatting
 (enabled_for ocaml reason))

(generate_opam_files true)

(source
 (github keinsell/apss))

(authors "keinsell <keinsell@protonmail.com>")

(maintainers "keinsell <keinsell@protonmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name kamel)
 (synopsis "Apointment Scheduling Software System (APSS)")
 (description "A longer description")
 (depends
  ocaml
  ;; Build-time and compilation
  (js_of_ocaml-compiler
   (and
    :build
    (>= 4.0.0)))
    (melange
   (>= 3.0.0))
     (reason
   (>= 3.10.0))
     (reason-react
   (>= 0.14.0))
  (reason-react-ppx
   (>= 0.14.0))
     (ocaml-lsp-server :with-test)
  (js_of_ocaml-ppx :build)
  (ppx_deriving :build)
  (ppxlib
   (and
    :build
    (>= 0.14.0)))
  (reason :build)
  ;; Testing
  (alcotest :with-test)
  (omnomnom :with-test)
  (qcheck-core :with-test)
  (qcheck-alcotest :with-test)
  ;; Documentation
  (odoc :with-doc)
  ;; Development Tools
  (bisect_ppx
   (and
    :with-test
    (>= 2.5.0)))
  (ocamlformat :dev)
  ;; Runtime
  dune
  cohttp
  cohttp-lwt-unix
  lwt
  lwt_ppx
  yojson
  melange
  reason
  ocaml-lsp-server
  ocamlformat
  ppx_deriving
  rtop
  melange-atdgen-codec-runtime
  dream
  logs
  fmt
  cmdliner
  ;; Database
  pgx
  pgx_async
  caqti-driver-pgx
  caqti
  caqti-driver-sqlite3
  ppx_rapper_lwt
  (alcotest :with-test))
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
