tool.uv.package = true

[project]
name = "grimoire"
version = "0.1.0"
description = "A CLI tool for managing markdown knowledge bases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[project.scripts]
grimoire = "main:cli"
