[project]
name = "zkk"
version = "0.1.0"
description = "CLI tool for indexing and managing zettelkasten/wikilinks-based knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "markdown>=3.5.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.21.0",
]

[project.scripts]
zkk = "zkk.main:cli"
