(env
 (dev
  (flags
   (:standard -w +A-48-42-44 -warn-error +A-3))))

;; Aliases for common operations
;; These can be run with 'dune build @alias'

;; Format code
(rule
 (alias fmt)
 (action (progn
          (echo "Formatting code...")
          (echo "Run 'dune build @fmt' in your terminal"))))

;; Lint code / Check code style
(rule
 (alias check)
 (action (progn
          (echo "Running code style check..."))))

;; Build everything
(rule
 (alias all)
 (action (progn
          (echo "Building everything...")
          (echo "Run 'dune build @install' in your terminal"))))

;; Run tests
(rule
 (alias test)
 (action (progn
          (echo "Running tests...")
          (echo "Run 'dune runtest --no-buffer' in your terminal"))))

;; Watch for changes
(rule
 (alias watch)
 (action (progn
          (echo "Watching for changes...")
          (echo "Run 'dune build --watch' in your terminal"))))

;; Start REPL with libraries loaded
(rule
 (alias utop)
 (action (progn
          (echo "Starting utop...")
          (echo "Run 'dune utop lib -- -implicit-bindings' in your terminal"))))

;; Clean build artifacts
(rule
 (alias clean)
 (action (progn
          (echo "Cleaning build artifacts...")
          (echo "Run 'dune clean' in your terminal"))))

;; Install dependencies
(rule
 (alias deps)
 (action (progn
          (echo "Installing dependencies...")
          (echo "Run 'opam install . --deps-only --with-test --with-doc -y' in your terminal"))))
