(lang dune 3.16)

(name csv)

(license ISC)

(authors
  "keinsell")

(maintainers
  "keinsell")

(generate_opam_files true)

(package
 (name csv)
 (synopsis "A short, but powerful statement about your project")
 (description "A short, but powerful statement about your project")
 (depends
  (containers
   (>= 3.13.1))
  (dream
   (>= 1.0.0~alpha5))
  (dune
   (>= 3.11))
  (melange
   (>= 2.1.0))
  (ocaml
   (>= 5.1.0))
  (ocaml-lsp-server
   (>= 1.17.0))
  melange-webapi
  ocamlformat
  opam-check-npm-deps
  ppx_deriving
  reason
  reason-react-ppx
  rtop))